vscode-ssh/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: okteto/vote:1.3
        name: vote
        volumeMounts:
        - name: ssh
          mountPath: "/etc/ssh-key"
      volumes:
      - name: ssh
        secret:
          secretName: ssh-public
